# ansible-log-analysis

./: .env.example  .gitignore  .pre-commit-config.yaml  Containerfile  Makefile  README.md  docker-compose.yaml  entrypoint.sh  init_df.py  init_pipeline.py  pdf_reader.py  pyproject.toml  setup_data_dirs.sh  test.py
.github/workflows/: build-and-push.yml  check-lint-and-format.yml
annotation_interface/: Containerfile  README.md  app.py  pyproject.toml
config/: custom-values.yaml
config/promtail/: promtail-config.yml
deploy/helm/: Makefile  README.md
deploy/helm/ansible-log-monitor/: Chart.yaml  global-values.yaml  values-global.yaml  values.yaml
deploy/helm/ansible-log-monitor/charts/annotation-interface/: values.yaml
deploy/helm/ansible-log-monitor/charts/annotation-interface/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml
deploy/helm/ansible-log-monitor/charts/backend/: values.yaml
deploy/helm/ansible-log-monitor/charts/backend/templates/: NOTES.txt  configmap.yaml  deployment.yaml  init-job.yaml  rag-pvc.yaml
deploy/helm/ansible-log-monitor/charts/clustering/: values.yaml
deploy/helm/ansible-log-monitor/charts/loki-stack/: values.yaml
deploy/helm/ansible-log-monitor/charts/phoenix/: values.yaml
deploy/helm/ansible-log-monitor/charts/ui/: values.yaml
deploy/helm/ansible-log-monitor/templates/: NOTES.txt  _helpers.tpl  backend.yaml  init-job.yaml  postgres.yaml  secret.yaml  serviceaccount.yaml  ui.yaml
deploy/local/: Makefile  README.md  compose.yaml
deploy/local/config/promtail/: promtail-local-config.yaml
deploy/local/scripts/: backend.sh  labeling.sh  postgres.sh  ui.sh
examples/: test_loki_graph.py
labeling_interface/: app.py  hello.py
labeling_ui/: README.md  app.py  pyproject.toml
scripts/: backend.sh  deploy_app_localy.sh  init_df.sh  labeling.sh  ui.sh
services/clustering/: Containerfile  app.py  main.py  model_loader.py  pyproject.toml
src/alm/: alert_mocker.py  config.py  database.py  grafana_alert_mocker.py  llm.py  main_fastapi.py  models.py
src/alm/agents/: graph.py  loki_agent_node.py  loki_input_schemas.py  loki_output_schemas.py  loki_tools.py  node.py  output_scheme.py  state.py
src/alm/agents/analizer/: graph.py  node.py  prompts.py  state.py
src/alm/agents/analizer/prompts/: categorize_log.md  create_log_summary.md  create_step_by_step_sol.md  suggest_fix.md  suggest_step_by_step_solution.md
src/alm/agents/get_more_context_agent/: graph.py  node.py  rag_handler.py  state.py
src/alm/agents/loki_agent/: __init__.py  agent.py  graph.py  main.py  nodes.py  state.py
src/alm/agents/loki_agent/prompts/: identify_missing_data.md  loki_agent_system_prompt.md
src/alm/agents/loki_agent/schemas/: __init__.py  inputs.py  outputs.py
src/alm/agents/prompts/: router_step_by_step_solution.md
src/alm/mcp/: __init__.py  mcp_client.py
src/alm/patterns/: ingestion.py
src/alm/pipeline/: find_categories.py  offline.py
src/alm/rag/: embed_and_index.py  example_usage.py  ingest_and_chunk.py  query_api.py  query_pipeline.py  test_queries.py
src/alm/routes/: errors.py  grafana_alert.py
src/alm/tools/: __init__.py  loki_tools.py
src/alm/utils/: minio.py  phoenix.py
tests/rag/: test_embeddings.py  test_queries.py
ui/: Containerfile  README.md  app.py  pyproject.toml
(+5 files in other folders)
