[project]
name = "alm"
version = "0.1.0"
description = "Ansible Log Monitoring"
readme = "README.md"
authors = [
    { name = "Itay Katav", email = "ikatav@redhat.com" }
]
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "langgraph>=0.6.3",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alm"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "jupyterlab>=4.4.5",
    "pre-commit>=4.2.0",
    "rich>=14.1.0",
]
