[project]
name = "alm"
version = "0.1.0"
description = "Ansible Log Monitoring"
readme = "README.md"
authors = [
    { name = "Itay Katav", email = "ikatav@redhat.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "langgraph>=0.6.3",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.35.0",
    "httpx>=0.27.2",
    "gradio>=5.42.0",
    "sqlmodel>=0.0.8",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "asyncpg>=0.30.0",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=5.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alm"]

[tool.uv.workspace]
members = ["labeling_ui"]


[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "jupyterlab>=4.4.5",
    "pre-commit>=4.2.0",
    "rich>=14.1.0",
    "ruff>=0.12.8",
]
