[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alm"
version = "0.1.1"
description = "Ansible Log Monitoring"
readme = "README.md"
authors = [
    { name = "Itay Katav", email = "ikatav@redhat.com" }
]
requires-python = ">=3.12"

dependencies = [
    # Core web and AI framework dependencies
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "langgraph>=0.6.5",
    "uvicorn>=0.35.0",
    "httpx>=0.27.2",
    "gradio>=5.42.0",

    # Configuration and API
    "python-dotenv>=1.1.0",
    "requests>=2.31.0",

    # Database and ORM
    "sqlmodel>=0.0.8",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "asyncpg>=0.30.0",

    # Machine learning and embeddings (RAG)
    "scikit-learn>=1.7.1",
    "sentence-transformers>=2.3.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0",
    "einops>=0.7.0",

    # Object storage
    "minio>=7.2.17",

    # Document ingestion and PDF processing
    "pdfplumber>=0.10.0",
    "pypdf>=3.17.0",

    # Testing
    "pytest>=7.4.0",
    "arize-phoenix-otel>=0.13.1",
    "openinference-instrumentation-langchain>=0.1.33",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "html2text>=2025.4.15",
    "isort>=6.0.1",
    "jupyterlab>=4.4.5",
    "langgraph-cli[inmem]>=0.4.4",
    "pre-commit>=4.2.0",
    "prettier>=0.0.7",
    "rich>=14.1.0",
    "ruff>=0.12.8",
]

[tool.setuptools.packages.find]
where = ["src"]
